<resources>
    <string name="app_name" translatable="false">Jal hi jeevan</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings" translatable="false">Settings</string>
    <string name="title_activity_main2" translatable="false">Main2Activity</string>
    <string name="section_format" translatable="false">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="yc">Your Complaints</string>
    <string name="pc">People\'s Complaints</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title" translatable="false">Cycling!</string>
    <string name="slide_1_desc" translatable="false">My passion for cycling never that much amazing before!</string>

    <string name="slide_2_title" translatable="false">Bike Ride</string>
    <string name="slide_2_desc" translatable="false">I love long drive bike ride with my friends!</string>

    <string name="slide_3_title" translatable="false">Pool Swimming</string>
    <string name="slide_3_desc" translatable="false">I can spend hours in swimmng pool with some food!</string>

    <string name="slide_4_title" translatable="false">Rowing</string>
    <string name="slide_4_desc" translatable="false">Wonder thunder ride in rowing in river always amazing!</string>

    <string name="welcomescreen"> Welcome to Home Screen</string>


    <!-- Lingo-->
    <string name="Name">Name</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="SelectCategory">Select Category</string>
    <string name="Description">Description:</string>
    <string name="Suggestion">Suggestion</string>
    <string name="Next">Next</string>
    <string name="YourSuggestion">Your Suggestion</string>
    <string name="FileAComplaint">File A Complaint</string>
    <string name="Submit">Submit</string>
    <string name="Skip">Skip</string>
    <string name="ChooseLang">Choose Language</string>
    <string name="WaterBodyType">Water Body Type:</string>
    <string name="EnterOTP">Enter OTP</string>
    <string name="EnterYourPhone">Enter Your Mobile Number</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="Encroachment">Encroachment</string>
    <string name="Industrial">Industrial</string>
    <string name="HumanWaste">Human Waste</string>
    <string name="AnimalDeadBodies">Animal Dead Bodies</string>
    <string name="Sewage">Sewage</string>
    <string name="Plastic">Plastic</string>
    <string name="WaterScarcity">Water Scarcity</string>
    <string name="Other">Other</string>
    <string name="River">River</string>
    <string name="Lake">Lake</string>
    <string name="Pond">Pond</string>
    <string name="Beach">Beach</string>
    <string name="Canal">Canal</string>
    <string name="Well">Well</string>
    <string name="Settings">Settings</string>
    <string name="gps_network_not_enabled" translatable="false">GPS not enabled</string>
    <string name="open_location_settings" translatable="false">Open location settings</string>
    <string name="Cancel">Cancel</string>
    <string name="Ganga">Ganga</string>
    <string name="UnsafeEmbankment">Unsafe Embankment</string>
    <string name="SandMining">Sand Mining</string>
    <string name="Select">Select</string>
    <string name="Location">Location:</string>
    <string name="Category">Category:</string>
    <string name="Thankyou">Thank You!</string>
    <string name="YourComplaintHasBeenRegistered">Your Complaint Has Been Registered</string>
    <string name="ClickHereToSignIn">Click Here To Sign In</string>
    <string name="DescribeYourComplaint">Describe Your Complaint</string>
    <string name="SelectAnyOne">2.Select Any One</string>
    <string name="ClickHereToComplaint">1.Click Here To Complaint</string>
    <string name="Support">Support</string>
    <string name="TotalSupports">Total Supports:</string>
</resources>
